package edu.fiuba.algo3.modelo.edificios;


/**
* @generated
*/
public class Banco implements Edificio {
    
    
    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public DamePista() {
        //TODO
    }
    
}
