package edu.fiuba.algo3.modelo.edificios;


/**
* @generated
*/
public class Biblioteca implements Edificio {
    
    
    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public DamePista() {
        //TODO
    }
    
}
